--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                 詳細
             
             </h3>
-            <p class="日時">日時:2020年10月4日(日)17:00~19:00
+            <p class="日時">日時:
             </p>
-            <p class="場所">場所:zoom</p>
+            <p class="場所">場所:</p>
             <p class="人数">人数:10~15人</p>
             <p class="料金">料金:無料</p>
     </footer>
