--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>日曜夜の人狼会</title>
+    <title>水曜夜の人狼会</title>
     <link rel="stylesheet" href="jinro.css">
 </head>
 <body>
     <header>
        <img src="./jinro.png" alt="jinro" class="a">
-       <h1><br>《日曜夜の人狼会》
+       <h1><br>《水曜夜の人狼会》
        <br>友達を増やしたい！遊びたい！人狼をしたい！<br>
         そんな方々のためのイベント！</h1>
     </header>
@@ -152,11 +152,9 @@
                 詳細
             
             </h3>
-            <p class="日時">日時:
+            <p class="日時">日時:10/21(水)18:00~21:00
             </p>
-            <p class="場所">場所:</p>
-            <p class="人数">人数:10~15人</p>
-            <p class="料金">料金:無料</p>
+            <p class="場所">場所:代々木</p>
     </footer>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
